Fixed issues with sidebar and dropdown-menu in topbar, on mobile devices.

--- a/fron/src/scss/modules/style.scss
+++ b/fron/src/scss/modules/style.scss
@@ -40,5 +40,12 @@ body{
     .row{
         padding: 0;
         padding-top: 20px;
+        &.toggled{
+            .sidebar{
+                width: 100%;
+                height: 95%;
+                border-right: solid 1px;
+            }
+        }
     }
 }
